--- a/styles.css
+++ b/styles.css
@@ -17,15 +17,24 @@
 }
 
 .library{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
     height: 800px;
-    color: red;
     grid-row: 2 / 3;
     background-color: rgb(105, 28, 28);
 
 }
 
 .book{
-
+    display: flex;
+    height: 200px;
+    width: 250px;
+    background-color: white;
+    border-radius: 15px;
+    margin: 10px;
+    padding: 5px;
+    justify-content: center;
 }
 
 div{
